tests/paczka1/fuzzy1/26529342.err
Error in line 4: QZdR1lNHQQ A747 28,7
Error in line 22: K1l3VsH1j A747 79,20
Error in line 13: PWsp0q A495 74,2
Error in line 31: 5MURoc9s A641 -1,1
